@@ -34,13 +34,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <cu.junit.version>4.12</cu.junit.version>
-        <cu.logback.version>1.2.3</cu.logback.version>
-        <cu.cassandra.all.version>3.11.5</cu.cassandra.all.version>
-        <cu.cassandra.driver.version>4.3.1</cu.cassandra.driver.version>
-        <cu.spring.version>4.0.2.RELEASE</cu.spring.version>
-        <cu.hamcrest.version>1.3</cu.hamcrest.version>
+        <cu.junit.version>4.13.2</cu.junit.version>
+        <cu.logback.version>1.2.11</cu.logback.version>
+        <cu.cassandra.all.version>4.0.3</cu.cassandra.all.version>
+        <cu.cassandra.driver.version>4.14.1</cu.cassandra.driver.version>
+        <cu.spring.version>5.2.21.RELEASE</cu.spring.version>
+        <cu.hamcrest.version>2.2</cu.hamcrest.version>
+        <cu.hamcrest.lib.version>2.2</cu.hamcrest.lib.version>
     </properties>
 
     <distributionManagement>
@@ -75,8 +75,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
+
                 </configuration>
             </plugin>
             <plugin>
@@ -106,6 +107,10 @@
                 <version>2.7.2</version>
                 <configuration>
                     <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
+                    <argLine>
+                        --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                        --add-exports cassandra-all-4.0.3/org.apache.cassandra=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
